tests/baselines/reference/invalid-range-lookbehind.errors.txt
invalid-range-lookbehind.ts(19,9): error TS1505: There is nothing available for repetition.


==== invalid-range-lookbehind.ts (1 errors) ====
    // Copyright (C) 2018 Igalia S. L. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-regular-expressions-patterns
    description: Lookbehinds are not treated as a QuantifiableAssertion
    info: |
        Term[U] ::
             [~U] QuantifiableAssertion Quantifier
    
        QuantifiableAssertion[N]::
            ( ? = Disjunction[~U, ?N] )
            ( ? ! Disjunction[~U, ?N] )
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /.(?<=.){2,3}/;
            ~~~~~
!!! error TS1505: There is nothing available for repetition.
    